--- a/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeForm.html
@@ -1,57 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Meta -->
-	<meta name="description" content="Vivo - Responsive Bootstrap 5 Dashboard Template">
-	<meta name="author" content="Bootstrap Gallery" />
-	<link rel="canonical" href="https://www.bootstrap.gallery/">
-	<meta property="og:url" content="https://www.bootstrap.gallery">
-	<meta property="og:title" content="Admin Templates - Dashboard Templates | Bootstrap Gallery">
-	<meta property="og:description" content="Marketplace for Bootstrap Admin Dashboards">
-	<meta property="og:type" content="Website">
-	<meta property="og:site_name" content="Bootstrap Gallery">
-	<link rel="shortcut icon" href="/xdm/assets/images/favicon.svg">
-
-	<!-- Title -->
-	<title>Vivo Admin Template - Admin Dashboard</title>
-
-
-	<!-- *************
-			************ Common Css Files *************
-		************ -->
-
-	<!-- Animated css -->
-	<link rel="stylesheet" href="/xdm/assets/css/animate.css">
-
-	<!-- Bootstrap font icons css -->
-	<link rel="stylesheet" href="/xdm/assets/fonts/bootstrap/bootstrap-icons.css">
-
-	<!-- Main css -->
-	<link rel="stylesheet" href="/xdm/assets/css/main.min.css">
-
-
-	<!-- *************
-			************ Vendor Css Files *************
-		************ -->
-
-	<!-- Scrollbar CSS -->
-	<link rel="stylesheet" href="/xdm/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
-
-	<!-- Date Range CSS -->
-	<link rel="stylesheet" href="/xdm/assets/vendor/daterange/daterange.css">
-
-	<!-- Uploader CSS -->
-	<link rel="stylesheet" href="/xdm/assets/vendor/dropzone/dropzone.min.css" />
-
-	<!-- Bootstrap Select CSS -->
-	<link rel="stylesheet" href="/xdm/assets/vendor/bs-select/bs-select.css" />
-
-</head>
+<div th:replace="~{xdm/infra/include/head :: head}"></div>
 
 <body>
 
@@ -71,171 +21,16 @@
 	<!-- Page wrapper start -->
 	<div class="page-wrapper">
 
-		<!-- Sidebar wrapper start -->
-		<nav class="sidebar-wrapper">
-
-			<!-- Sidebar brand starts -->
-			<div class="sidebar-brand">
-				<a href="index.html" class="logo">
-					<img src="/xdm/assets/images/logo.svg" alt="Vivo Admin Dashboard" />
-				</a>
-			</div>
-			<!-- Sidebar brand starts -->
-
-			<!-- Sidebar menu starts -->
-			<div class="sidebar-menu">
-				<div class="sidebarMenuScroll">
-					<ul>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-house"></i>
-								<span class="menu-text">코드/코드그룹</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a th:href="@{/CodeXdmList}">코드관리</a>
-									</li>
-									<li>
-										<a th:href="@{/CodeGroupXdmList}">코드그룹 관리</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-collection"></i>
-								<span class="menu-text">회원관리</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a th:href="@{/MemberXdmList}">멤버관리</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-						<li class="sidebar-dropdown">
-							<a href="#">
-								<i class="bi bi-handbag"></i>
-								<span class="menu-text">제품관리</span>
-							</a>
-							<div class="sidebar-submenu">
-								<ul>
-									<li>
-										<a th:href="@{/ProductXdmList}">제품관리</a>
-									</li>
-								</ul>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- Sidebar menu ends -->
-
-		</nav>
-		<!-- Sidebar wrapper end -->
+		<!--사이드바 블록처리-->
+		<div th:replace="~{xdm/infra/include/sidebar :: sidebar}"></div>
 
 		<!-- *************
 				************ Main container start *************
 			************* -->
 		<div class="main-container">
-
-			<!-- Page header starts -->
-			<div class="page-header">
-
-				<div class="toggle-sidebar" id="toggle-sidebar"><i class="bi bi-list"></i></div>
-
-				<!-- Breadcrumb start -->
-				<ol class="breadcrumb">
-					<li class="breadcrumb-item">
-						<i class="bi bi-house"></i>
-						<a href="index.html">Home</a>
-					</li>
-					<li class="breadcrumb-item">Pages</li>
-					<li class="breadcrumb-item breadcrumb-active" aria-current="page">Account Settings</li>
-				</ol>
-				<!-- Breadcrumb end -->
-
-				<!-- Header actions ccontainer start -->
-				<div class="header-actions-container">
-
-					<!-- Search container start -->
-					<div class="search-container">
-
-						<!-- Search input group start -->
-						<div class="input-group">
-							<input type="text" class="form-control" placeholder="Search anything">
-							<button class="btn" type="button">
-								<i class="bi bi-search"></i>
-							</button>
-						</div>
-						<!-- Search input group end -->
-
-					</div>
-					<!-- Search container end -->
-
-					<!-- Leads start -->
-					<a href="orders.html" class="leads d-none d-xl-flex">
-						<div class="lead-details">You have <span class="count"> 21 </span> new leads </div>
-						<span class="lead-icon"><i
-								class="bi bi-bell-fill animate__animated animate__swing animate__infinite infinite"></i><b
-								class="dot animate__animated animate__heartBeat animate__infinite"></b></span>
-					</a>
-					<!-- Leads end -->
-
-					<!-- Header actions start -->
-					<ul class="header-actions">
-						<li class="dropdown d-none d-md-block">
-							<a href="#" id="countries" data-toggle="dropdown" aria-haspopup="true">
-								<img src="/xdm/assets/images/flags/1x1/gb.svg" class="flag-img"
-									alt="AI Admin Dashboards" />
-							</a>
-							<div class="dropdown-menu dropdown-menu-end mini" aria-labelledby="countries">
-								<div class="country-container">
-									<a href="index.html">
-										<img src="/xdm/assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
-									</a>
-									<a href="index.html">
-										<img src="/xdm/assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
-									</a>
-									<a href="index.html">
-										<img src="/xdm/assets/images/flags/1x1/br.svg" alt="Admin Panels" />
-									</a>
-									<a href="index.html">
-										<img src="/xdm/assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
-									</a>
-									<a href="index.html">
-										<img src="/xdm/assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
-									</a>
-								</div>
-							</div>
-						</li>
-						<li class="dropdown">
-							<a href="#" id="userSettings" class="user-settings" data-toggle="dropdown"
-								aria-haspopup="true">
-								<span class="user-name d-none d-md-block">Abigale Heaney</span>
-								<span class="avatar">
-									<img src="/xdm/assets/images/user.png" alt="Admin Templates">
-									<span class="status online"></span>
-								</span>
-							</a>
-							<div class="dropdown-menu dropdown-menu-end" aria-labelledby="userSettings">
-								<div class="header-profile-actions">
-									<a href="profile.html">Profile</a>
-									<a href="account-settings.html">Settings</a>
-									<a href="login.html">Logout</a>
-								</div>
-							</div>
-						</li>
-					</ul>
-					<!-- Header actions end -->
-
-				</div>
-				<!-- Header actions ccontainer end -->
-
-			</div>
-			<!-- Page header ends -->
+		
+			<!--파일헤더 블록처리-->
+			<div th:replace="~{xdm/infra/include/fileheader :: fileheader}"></div>
 
 			<!-- Content wrapper scroll start -->
 			<div class="content-wrapper-scroll">
@@ -262,18 +57,14 @@
 													<div class="col-6">
 														<label for="codeGroupSeqF" class="form-label">코드그룹 시퀀스</label>
 														<input type="text" id="codeGroupSeqF" name="codeGroupSeqF" class="form-control" th:value="${item.codeGroupSeqF}">
-														<div class="invalid-feedback">
-													  			코드그룹 시퀀스를 입력하세요
-													  	</div>
+														<div class="invalid-feedback" id="codeGroupSeqFFeedback"></div>
 													</div>
 											</div>
 											<div class="row mt-3">
 													<div class="col-6">
 														<label for="codeName" class="form-label">이름</label>
 														<input type="text" id="codeName" name="codeName" class="form-control" th:value="${item.codeName}">
-														<div class="invalid-feedback">
-													  			코드그룹 이름을 입력하세요
-													  	</div>
+														<div class="invalid-feedback" id="codeNameFeedback"></div>
 													</div>
 													<div class="col-6">
 														<label for="codeMemo" class="form-label">메모</label>
@@ -297,27 +88,8 @@
 								</form>
 								<!-- 컨테이너 끝 -->
 								<script>
-									(function () {
-										'use strict'
-
-										// Fetch all the forms we want to apply custom Bootstrap validation styles to
-										var forms = document.querySelectorAll('.needs-validation')
-
-										// Loop over them and prevent submission
-										Array.prototype.slice.call(forms)
-											.forEach(function (form) {
-												form.addEventListener('submit', function (event) {
-													if (!form.checkValidity()) {
-														event.preventDefault()
-														event.stopPropagation()
-													}
-
-													form.classList.add('was-validated')
-												}, false)
-											})
-									})()
 									
-															//자바스크립트 버튼
+	//자바스크립트 버튼
 	document.getElementById("btnSubmit").onclick = function() {
 	
 	if(validationInst() == false)return false;
@@ -333,19 +105,10 @@
 	}
 	
 	function validationUpdt(){
-		if(!nullToEmpty(document.getElementById("codeName").value)) {
-			
-			document.getElementById("codeName").setAttribute("class", "form-control is-invalid");
-			return false;
-			
-		}
-		if(!nullToEmpty(document.getElementById("codeGroupSeqF").value)) {
-			
-			document.getElementById("codeGroupSeqF").setAttribute("class", "form-control is-invalid");
-			return false;
-			
-		}
+		if(!checkSelectNull('codeGroupSeqF', 2, "코드그룹을 선택해 주세요.")) return false;
+		if(!checkOnlyKoreanEnglishNumber('codeName', 2, 0, "코드그룹 이름은 한글, 영문대소문자, 숫자만 입력 가능합니다.")) return false;
 	}
+	
 	nullToEmpty = function(value){
 		if(value == null || value == 'null' || value.length == 0){
 			return false;
@@ -378,36 +141,7 @@
 		</div>
 		<!-- Page wrapper end -->
 
-		<!-- *************
-			************ Required JavaScript Files *************
-		************* -->
-		<!-- Required jQuery first, then Bootstrap Bundle JS -->
-		<script src="/xdm/assets/js/jquery.min.js"></script>
-		<script src="/xdm/assets/js/bootstrap.bundle.min.js"></script>
-		<script src="/xdm/assets/js/modernizr.js"></script>
-		<script src="/xdm/assets/js/moment.js"></script>
-
-		<!-- *************
-			************ Vendor Js Files *************
-		************* -->
-
-		<!-- Overlay Scroll JS -->
-		<script src="/xdm/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-		<script src="/xdm/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
-
-		<!-- Date Range JS -->
-		<script src="/xdm/assets/vendor/daterange/daterange.js"></script>
-		<script src="/xdm/assets/vendor/daterange/custom-daterange.js"></script>
-
-		<!-- Dropzone JS -->
-		<script src="/xdm/assets/vendor/dropzone/dropzone.min.js"></script>
-
-		<!-- Main Js Required -->
-		<script src="/xdm/assets/js/main.js"></script>
-
-		<!-- Bootstrap Select JS -->
-		<script src="/xdm/assets/vendor/bs-select/bs-select.min.js"></script>
-		<script src="/xdm/assets/vendor/bs-select/bs-select-custom.js"></script>
+		
 </body>
 
 </html>
