--- a/coffee/src/main/resources/templates/xdm/infra/CodeXdmList.html
+++ b/coffee/src/main/resources/templates/xdm/infra/CodeXdmList.html
@@ -110,11 +110,11 @@
 				<div class="container-fluid">
 					<div class="card-body ">
 						<!-- 페이지 셀렉트 -->
-						<div class="row  justify-content-end">
-							<div class="col mb-1 mt-2">
+						<div class="d-flex justify-content-between mt-4">
+							<div class="">
 								<label class="form-label">Total : 7</label>
 							</div>
-							<div class="col-2 mb-1 mt-2 justify-content-end">
+							<div class="">
 								<label class="form-label">Page</label>
 								<select class="form-select-sm">
 									<option>5</option>
