--- a/coffee/src/main/resources/templates/xdm/infra/include/footer.html
+++ b/coffee/src/main/resources/templates/xdm/infra/include/footer.html
@@ -2,36 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<th:block th:fragment="footer">
 			<!-- 페이지네이션 -->
-						<ul class="pagination justify-content-center mt-5 mb-4">
-							<li class="paginate_button page-item previous" id="basicExample_previous">
-								<a href="#" aria-controls="basicExample" data-dt-idx="0" tabindex="0"
-									class="page-link">Previous</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="1" tabindex="0"
-									class="page-link">1</a>
-							</li>
-							<li class="paginate_button page-item disabled" id="basicExample_ellipsis">
-								<a href="#" aria-controls="basicExample" data-dt-idx="2" tabindex="0"
-									class="page-link">…</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="3" tabindex="0"
-									class="page-link">8</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="4" tabindex="0"
-									class="page-link">9</a>
-							</li>
-							<li class="paginate_button page-item ">
-								<a href="#" aria-controls="basicExample" data-dt-idx="5" tabindex="0"
-									class="page-link">10</a>
-							</li>
-							<li class="paginate_button page-item next disabled" id="basicExample_next">
-								<a href="#" aria-controls="basicExample" data-dt-idx="8" tabindex="0"
-									class="page-link">Next</a>
-							</li>
+			<div class="container-fluid px-0 mt-2 mb-2">
+				<div class="row">
+					<div class="col">
+						<ul class="pagination justify-content-center mb-0">
+							<li th:if="${vo.startPage gt vo.pageNumToShow}" class="page-item" style="cursor: pointer;"><a class="page-link" href="javascript:goList(${vo.startPage - 1})" th:attr="onclick=|goList('${vo.startPage - 1}')|"><i class="fa-regular fa-angle-left"></i></a></li>
+							<li th:each="num: ${#numbers.sequence(vo.startPage, vo.endPage)}" th:classappend="${num eq vo.thisPage} ? active : ''" class="page-item" style="cursor: pointer;"><a class="page-link" th:attr="onclick=|goList('${num}')|" th:text="${num}"><!-- ${i.index} --></a></li>
+							<li th:if="${vo.endPage ne vo.totalPages}" class="page-item" style="cursor: pointer;"><a class="page-link" th:attr="onclick=|goList('${vo.endPage + 1}')|"><i class="fa-regular fa-angle-right"></i></a></li>
 						</ul>
-
+					</div>
+				</div>
+			</div>
+		<script>
+			goList = function (thisPage) {
+    document.querySelector("input[name=thisPage]").value = thisPage;
+    form.action = goUrlXdmList;
+    form.submit();
+}
+		</script>
 	</th:block>
 </html>
