--- a/coffee/src/main/resources/templates/xdm/infra/include/head.html
+++ b/coffee/src/main/resources/templates/xdm/infra/include/head.html
@@ -83,5 +83,7 @@
 	
 	<script src="/xdm/assets/js/validationXdm.js"></script>
 	
+	<script src="https://kit.fontawesome.com/1158bc9687.js" crossorigin="anonymous"></script>
+	
 </head>
 </html>
